fix: spacing issues in mobile, for post preview and tab margins

--- a/src/styles/subsocial-mobile.scss
+++ b/src/styles/subsocial-mobile.scss
@@ -243,9 +243,6 @@
       margin-top: 0;
       font-size: $font_large;
     }
-    &.DfSegment {
-      padding-bottom: 0 !important;
-    }
   }
 
   .DfPostImagePreviewWrapper {
